--- a/react/index.html
+++ b/react/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pixso AI Generated Project</title>
-    <meta name="description" content="Pixso AI Generated Project" />
-    <meta name="author" content="Pixso AI" />
+    <title>亿口甜筒 - 时光视频集</title>
+    <meta name="description" content="亿口甜筒时光视频集，记录美好瞬间" />
+    <meta name="author" content="亿口甜筒" />
     <meta property="og:image" content="/og-image.png" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   </head>
 
   <body>
