feat(字体/测试/优化): 添加站酷字体及文档，优化移动端UI和测试
新增站酷快乐体和庆科黄油体字体文件及说明文档
添加Playwright测试依赖和侧边栏滚动测试脚本
优化移动端UI交互元素和视频卡片点击反馈
重构视频模态框动画和加载状态显示
更新Vite配置添加图片优化插件
移除旧Vue前端项目相关文件

--- a/react/index.html
+++ b/react/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="亿口甜筒时光视频集，记录美好瞬间" />
     <meta name="author" content="亿口甜筒" />
     <meta property="og:image" content="/og-image.png" />
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <!-- 字体链接 (国内镜像) -->
+    <link href="https://fonts.googleapis.cn/css2?family=Noto+Sans+SC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.cn/css2?family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.cn/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.cn/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   </head>
 
   <body>
