--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/src/styles/globals.css" />
-    <link rel="stylesheet" href="/src/styles/tiantong.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>洞主凯哥-时光视频集</title>
+    <title>时光视频集</title>
   </head>
   <body>
     <div id="root"></div>
