--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,44 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/src/styles/globals.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>时光视频集</title>
+    <link rel="stylesheet" href="/src/styles/globals.css" />
+    <script>
+      (function() {
+        // 处理从 404.html 重定向的情况
+        var urlParams = new URLSearchParams(window.location.search);
+        var fromPath = urlParams.get('from');
+
+        if (fromPath) {
+          // 清理路径
+          var path = fromPath.replace(/\/+/g, '/');
+          if (path.startsWith('/')) {
+            path = path.slice(1);
+          }
+          if (path.endsWith('/')) {
+            path = path.slice(0, -1);
+          }
+
+          // 使用 history API 更新 URL，不刷新页面
+          if (path && path !== 'index.html') {
+            var newPath = '/' + path;
+            window.history.replaceState(null, '', newPath);
+          }
+
+          // 移除 URL 中的 from 参数
+          urlParams.delete('from');
+          var newUrl = window.location.pathname;
+          if (urlParams.toString()) {
+            newUrl += '?' + urlParams.toString();
+          }
+          if (window.location.hash) {
+            newUrl += window.location.hash;
+          }
+          window.history.replaceState(null, '', newUrl);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
